update calculate_sample_weights.ipynb with most recent data

--- a/Notebooks/calculate_sample_weights.ipynb
+++ b/Notebooks/calculate_sample_weights.ipynb
@@ -12,46 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/amyclaman/Blindness-Detection-App/Notebooks'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read diagnosis from csv files and cread a list\n",
-    "train_df = pd.read_csv('data/train_4category.csv')\n",
+    "train_df_jpeg = pd.read_csv('data/train_jpeg.csv')\n",
+    "train_df_jpg = pd.read_csv('data/train_jpg.csv')\n",
+    "train_df_orig = pd.read_csv('data/train.csv')\n",
+    "frames = [train_df_jpeg, train_df_jpg, train_df_orig]   \n",
+    "train_df = pd.concat(frames)\n",
     "class_list = train_df['diagnosis']\n",
     "class_list = class_list.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,19 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 0.507202216066482,\n",
-       " 1: 2.4743243243243245,\n",
-       " 2: 0.9164164164164165,\n",
-       " 3: 1.8760245901639345}"
+       "{0: 0.7664265927977839,\n",
+       " 1: 0.8534238124614435,\n",
+       " 2: 1.0649730561970747,\n",
+       " 3: 1.2135087719298245,\n",
+       " 4: 1.315019011406844}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
